[gd_scene load_steps=6 format=2]

[ext_resource path="res://Chicken.gd" type="Script" id=1]
[ext_resource path="res://Sprites/chicken.png" type="Texture" id=2]
[ext_resource path="res://Scene/Chicken.tres" type="DynamicFont" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 80.0

[sub_resource type="CircleShape2D" id=3]
radius = 30.0

[node name="Chicken" type="Area2D" groups=["Chicken"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="DetectionRange" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="HungerTimer" type="Timer" parent="."]
autostart = true

[node name="EatTimer" type="Timer" parent="."]

[node name="StatusLabel" type="Label" parent="."]
margin_left = -53.0
margin_top = -150.0
margin_right = 53.0
margin_bottom = -99.0
custom_fonts/font = ExtResource( 3 )
text = "HUNGER:
DIRECTION:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EatingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EatingArea"]
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Chicken_area_entered"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]
[connection signal="timeout" from="EatTimer" to="." method="_on_EatTimer_timeout"]
[connection signal="area_entered" from="EatingArea" to="." method="_on_EatingArea_area_entered"]
